--- a/javascript/node/microservices/docker-compose.yml
+++ b/javascript/node/microservices/docker-compose.yml
@@ -4,10 +4,11 @@ services:
     build: api-gateway
     environment:
       - DD_ENV
-      - DD_TRACE_DEBUG
-      - DD_TRACE_ENABLED
+      - DD_TRACE_DEBUG=true
+      - DD_TRACE_ENABLED=true
       - DD_LOGS_INJECTION=true
       - DD_AGENT_HOST=agent
+      - DD_PROFILING_ENABLED=true
     volumes:
       - ./api-gateway/src:/usr/src/app/src
     ports:
@@ -18,24 +19,26 @@ services:
     build: auth
     environment:
       - DD_ENV
-      - DD_TRACE_DEBUG
-      - DD_TRACE_ENABLED
+      - DD_TRACE_DEBUG=true
+      - DD_TRACE_ENABLED=true
       - DD_LOGS_INJECTION=true
       - DD_AGENT_HOST=agent
+      - DD_PROFILING_ENABLED=true
     labels:
       com.datadoghq.ad.logs: '[{"source": "docker", "service": "auth"}]'
   user:
     build: user
     environment:
       - DD_ENV
-      - DD_TRACE_DEBUG
-      - DD_TRACE_ENABLED
+      - DD_TRACE_DEBUG=true
+      - DD_TRACE_ENABLED=true
       - DD_LOGS_INJECTION=true
       - DD_AGENT_HOST=agent
+      - DD_PROFILING_ENABLED=true
     labels:
       com.datadoghq.ad.logs: '[{"source": "docker", "service": "user"}]'
   agent:
-    image: datadog/agent:6.14.1
+    image: datadog/agent
     environment:
       - DD_ENV
       - DD_TAGS="env:${DD_ENV}"
