--- a/python/django/django-tutorial/docker-compose.yml
+++ b/python/django/django-tutorial/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     environment:
       - 'DATADOG_TRACE_AGENT_HOSTNAME=agent'
       - 'DATADOG_TRACE_DEBUG=true'
+      - 'DD_PROFILING_ENABLED=true'
     ports:
       - '8000:8000'
 
